# automd-rs

./: Cargo.toml  README.md  package.json
docs/: index.md
docs/.vitepress/: config.mts
docs/guide/: api.md  block-reference.md  getting-started.md
src/: badges.rs  contributors.rs  error.rs  github.rs  handler.rs  lib.rs  main.rs  manifest.rs  readme.rs
src/generators/: badges.rs  cargo_add.rs  cargo_install.rs  contributors.rs  description.rs  file.rs  mod.rs  with_automdrs.rs
src/parser/: cargo.rs  mod.rs  readme.rs  tag_options.rs
