[package]
name = "automd-rs"
version = "0.0.1"
authors = ["YONGQI <betterhyq@qq.com>"]
edition = "2024"
description = "A template for creating a crate package"
readme = "README.md"
homepage = "https://github.com/betterhyq/automd-rs"
repository = "https://github.com/betterhyq/automd-rs.git"
license = "MIT"
keywords = [""]
categories = ["development-tools"]

[[bin]]
name = "automd-rs"
path = "src/main.rs"

[dependencies]
c12-parser = "1.0.1"
find-cargo-toml = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.5.8"
